--- a/index.html
+++ b/index.html
@@ -2,10 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-<body>
-    <h1> onni</h1>
+<body><center>
+    <h1> INNO COSTELO </h1>
+
+       <table border='1'> 
+        <tr>
+            <td>Activity</td>
+            <td>Link</td>
+        </tr>
+        <tr>
+            <td>Fashion Blog</td>
+            <td> <a target=”_blank” href="./activity/fashion.html">View Here</a></td>
+        </tr>
+        <tr>
+            <td>Wine Festival Schedule</td>
+            <td> <a target=”_blank” href="./activity/festival.html">View Here</a></td>
+        </tr>
+        <tr>
+            <td>Divies Burger</td>
+            <td> <a target=”_blank” href="./activity/davies.html">View Here</a></td>
+        </tr>
+           
 </body>
 </html>
