--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body><center>
-    <h1> MYK PALADO </h1>
+    <h1> INNO COSTELO </h1>
 
        <table border='1'> 
         <tr>
