--- a/index.html
+++ b/index.html
@@ -1,30 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
-</head>
-<body><center>
-    <h1> INNO COSTELO </h1>
-
-       <table border='1'> 
-        <tr>
-            <td>Activity</td>
-            <td>Link</td>
-        </tr>
-        <tr>
-            <td>Fashion Blog</td>
-            <td> <a target=”_blank” href="./activity/fashion.html">View Here</a></td>
-        </tr>
-        <tr>
-            <td>Wine Festival Schedule</td>
-            <td> <a target=”_blank” href="./activity/festival.html">View Here</a></td>
-        </tr>
-        <tr>
-            <td>Divies Burger</td>
-            <td> <a target=”_blank” href="./activity/davies.html">View Here</a></td>
-        </tr>
-           
-</body>
+    <head>
+        <title>My Portfolio</title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>My Portfolio</title>
+        <link rel="stylesheet" href="style.css"
+    </head>
+    <body>
+        <div class="hero">
+            <nav>
+                <img src="C:\costelo\me.jpg" class="logo">
+                <ul>
+                    <li><a href="#">Fashion Blog</a></li>
+                    <li><a href="#">Wine Festival Schedule</a></li>
+                    <li><a href="#">Davies Burger </a></li>              
+                </ul>
+            </nav>
+        </div>
+    
+    </body>
 </html>
