--- a/index.html
+++ b/index.html
@@ -5,19 +5,26 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My Portfolio</title>
         <link rel="stylesheet" href="style.css"
     </head>
     <body>
         <div class="hero">
             <nav>
-                <img src="C:\costelo\me.jpg" class="logo">
+                <img src="UIC-logo.png" alt="UIC-logo">
                 <ul>
                     <li><a href="#">Fashion Blog</a></li>
                     <li><a href="#">Wine Festival Schedule</a></li>
-                    <li><a href="#">Davies Burger </a></li>              
+                    <li><a href="#">Davies Burger </a></li>
+                    <li><a href="#">Financial Tracker </a></li>             
                 </ul>
             </nav>
+            <div class="detel">
+                <h1>I'm Inno <span>Costelo</span></h1>
+                <p> This is my Portfolio</p>
+            </div>
+            <div class="images">
+                <img src="me.jpg" class="me"
+            </div>
         </div>
     
     </body>
