--- a/index.html
+++ b/index.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>My Portfolio</title>
+        <title>My Portfolio</title> 
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css"
     </head>
     <body>
-        <div class="hero">
-            <nav>
-                <img src="UIC-logo.png" alt="UIC-logo">
-                <ul>
-                    <li><a href="#">Fashion Blog</a></li>
-                    <li><a href="#">Wine Festival Schedule</a></li>
-                    <li><a href="#">Davies Burger </a></li>
-                    <li><a href="#">Financial Tracker </a></li>             
-                </ul>
-            </nav>
-            <div class="detel">
-                <h1>I'm Inno <span>Costelo</span></h1>
-                <p> This is my Portfolio</p>
-            </div>
-            <div class="images">
-                <img src="me.jpg" class="me"
-            </div>
+         <div class="main">
+            <div class="navbar">
+            <img src
+            <ul>
+                <li><a href="fashion.html">Fashion-blog</a></li>
+                <li><a href="festival.html">Wine Festival Schedule</a></li>
+                <li><a href="davies.html">Davies Burger</a></li>
+            </ul>
         </div>
-    
-    </body>
+        <div class="info">
+        <h1> Hi, I'm Inno Miguel Antonio Costelo</h1>
+        <h2>BSIT-2B</h2>
+        <h3>This is my Portfolio</h3>
+    </div>
+    <div class="image">
+        <img src="me.jpg"class="me">
+    </div>
+</div>
+</body>
 </html>
